Fixed overflowing issue in the terminal

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
 }
 
 #terminal {
-  height: 100%;
+  height: fit-content;
   width: 100%;
   display: flex;
   flex-direction: column;
